Auto-generated JUnit tests | 2025-11-17 13:26:54